# docassist-pathoviewer

./: .gitignore  Dockerfile  README.md  config.example.yml  docker-compose.yml  pyproject.toml
app/: dz.py  fs_index.py  main.py  path_cache.py  thumbs.py
app/templates/: index.html  upload.html
